--- a/index.html
+++ b/index.html
@@ -39,6 +39,54 @@
       }
     }
 
+    @keyframes slideOutLeft {
+      from {
+        transform: translateX(0);
+        opacity: 1;
+      }
+
+      to {
+        transform: translateX(-100%);
+        opacity: 0;
+      }
+    }
+
+    @keyframes slideOutRight {
+      from {
+        transform: translateX(0);
+        opacity: 1;
+      }
+
+      to {
+        transform: translateX(100%);
+        opacity: 0;
+      }
+    }
+
+    @keyframes slideInFromLeft {
+      from {
+        transform: translateX(-100%);
+        opacity: 0;
+      }
+
+      to {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
+
+    @keyframes slideInFromRight {
+      from {
+        transform: translateX(100%);
+        opacity: 0;
+      }
+
+      to {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
+
     .sparkle {
         transform: translateX(0);
         opacity: 1;
@@ -6406,27 +6454,30 @@ V334.372z M421.925,274.284h-40.212v-45.25h22.904c9.563,0,17.308,7.758,17.308,17.
                               // Use 'title' if present, fallback to 'headline' for backward compatibility
                               const headline = event.title || event.headline || '';
                               return (
-                                <div key={eventId} className="relative w-full flex justify-center mb-6">
-                                  {/* Center Node for neutral announcement */}
+                                <div key={eventId} className="relative w-full flex justify-center mb-4">
+                                  {/* Center Node for neutral announcement - smaller size */}
                                   <div
-                                    className={`relative z-20 flex flex-col items-center max-w-[280px] sm:max-w-xs ${canExpand ? 'cursor-pointer' : ''}`}
+                                    className={`relative z-20 flex flex-col items-center max-w-[220px] sm:max-w-[260px] ${canExpand ? 'cursor-pointer' : ''}`}
                                     onClick={() => canExpand && toggleEventExpanded(eventId)}
                                   >
                                     <div className={`
-                                        flex items-center gap-2 px-4 py-2 rounded-full border shadow-md transition-all hover:scale-105
-                                        ${darkMode ? 'bg-purple-900 border-purple-700 text-white' : 'bg-purple-100 border-purple-300 text-purple-900'}
+                                        flex flex-col gap-1 px-3 py-2 rounded-lg border shadow-sm transition-all ${canExpand ? 'hover:shadow-md' : ''}
+                                        ${darkMode ? 'bg-purple-900 border-purple-700 text-white' : 'bg-purple-50 border-purple-200 text-purple-900'}
                                      `}>
-                                      <IconMegaphone />
-                                      <span className="font-bold text-sm">{headline}</span>
-                                      {event.time && <span className="text-xs opacity-75 font-mono ml-1">{event.time}</span>}
-                                    </div>
-
-                                    {/* Expanded Message */}
-                                    {isExpanded && (event.message || event.msg) && (
-                                      <div className={`mt-2 p-3 rounded-lg text-sm text-center w-full ${darkMode ? 'bg-gray-800 border border-gray-700 text-gray-300' : 'bg-white border border-gray-200 text-gray-700'} shadow-sm animate-fadeIn`}>
-                                        {event.message || event.msg}
+                                      {/* Header row */}
+                                      <div className="flex items-center gap-2">
+                                        <IconMegaphone className="w-3 h-3 flex-shrink-0" />
+                                        <span className="font-semibold text-xs">{headline}</span>
+                                        {event.time && <span className="text-xs opacity-60 font-mono ml-auto">{event.time}</span>}
                                       </div>
-                                    )}
+                                      
+                                      {/* Expanded Message - inside same box */}
+                                      {isExpanded && (event.message || event.msg) && (
+                                        <div className={`text-xs pt-1 border-t ${darkMode ? 'border-purple-600 text-purple-200' : 'border-purple-300 text-purple-800'} leading-relaxed`}>
+                                          {event.message || event.msg}
+                                        </div>
+                                      )}
+                                    </div>
                                   </div>
                                 </div>
                               );
@@ -7497,7 +7548,7 @@ V334.372z M421.925,274.284h-40.212v-45.25h22.904c9.563,0,17.308,7.758,17.308,17.
                               </button>
                               <button 
                                 onClick={() => {
-                                  if (!window.confirm('Delete this announcement?')) return;
+                                  if (!window.confirm('Are you sure you want to delete this announcement?')) return;
                                   const globalIdx = otherEvents.findIndex(e => e.type === 'announcement' && e.timestamp === ev.timestamp);
                                   if (globalIdx !== -1) {
                                     const updatedEvents = otherEvents.filter((_, i) => i !== globalIdx);
@@ -7528,8 +7579,8 @@ V334.372z M421.925,274.284h-40.212v-45.25h22.904c9.563,0,17.308,7.758,17.308,17.
                     </div>
                   )}
 
-                  {/* Actions */}
-                  <div className="flex gap-3 pt-2">
+                  {/* Actions - moved below existing announcements */}
+                  <div className={`flex gap-3 pt-4 ${announcementEvents.length > 0 ? 'border-t border-gray-300 mt-4' : ''}`}>
                     <button
                       onClick={() => {
                         setAnnouncementWizardOpen(false);
