Fix of X-button location in New game and Join forms

--- a/index.html
+++ b/index.html
@@ -5408,7 +5408,8 @@ V334.372z M421.925,274.284h-40.212v-45.25h22.904c9.563,0,17.308,7.758,17.308,17.
             <div className="max-w-md w-full p-6">
               <div className={`${darkMode ? 'bg-gray-800 text-white' : 'bg-white'} rounded-2xl shadow-2xl p-8`}>
 
-                <div className="flex justify-end">
+                <div className="flex justify-between items-center mb-6">
+                  <h2 className="text-2xl font-bold">New Game</h2>
                   <button
                     onClick={() => setScreen('start')}
                     className={`p-2 rounded-lg transition-colors ${darkMode
@@ -5422,8 +5423,6 @@ V334.372z M421.925,274.284h-40.212v-45.25h22.904c9.563,0,17.308,7.758,17.308,17.
                     </svg>
                   </button>
                 </div>
-
-                <h2 className="text-2xl font-bold mb-6">New Game</h2>
                 <div className="space-y-4 mb-6">
 
                   <div>
@@ -5717,7 +5716,8 @@ V334.372z M421.925,274.284h-40.212v-45.25h22.904c9.563,0,17.308,7.758,17.308,17.
 
           <div className="max-w-md w-full p-6">
             <div className={`${darkMode ? 'bg-gray-800 text-white' : 'bg-white'} rounded-2xl shadow-2xl p-8`}>
-              <div className="flex justify-end">
+              <div className="flex justify-between items-center mb-6">
+                <h2 className="text-2xl font-bold">Join Game</h2>
                 <button
                   onClick={() => setScreen('start')}
                   className={`p-2 rounded-lg transition-colors ${darkMode
@@ -5731,7 +5731,6 @@ V334.372z M421.925,274.284h-40.212v-45.25h22.904c9.563,0,17.308,7.758,17.308,17.
                   </svg>
                 </button>
               </div>
-              <h2 className="text-2xl font-bold mb-6 -mt-2">Join Game</h2>
 
 
               <div className={`${darkMode ? 'bg-gray-700 border-gray-600' : 'bg-blue-50 border-blue-200'} border rounded-lg p-4 mb-6 text-sm`}>
